--- a/29-PROYECTO-CitasModulos/index.html
+++ b/29-PROYECTO-CitasModulos/index.html
@@ -63,9 +63,9 @@
                 <ul id="citas" class="list-group lista-citas"></ul>
             </div>
         </div> <!--.row-->
-    </div><!--.container-->
+    </div><!--.containesr-->
 
-    <script src="js/app.js"></script>
+    <script src="js/app.js" type="module"></script>
 
 </body>
 </html>
