--- a/32-PROYECTO-CRMIndexedDB/nuevo-cliente.html
+++ b/32-PROYECTO-CRMIndexedDB/nuevo-cliente.html
@@ -28,7 +28,7 @@
             <div class="flex flex-col mt-10 items-center">
                 <div class="-my-2 py-2 overflow-x-auto sm:-mx-6 sm:px-6 lg:-mx-8 lg:px-8 w-10/12 md:w-8/12 lg:w-6/12">
                     <div class=" shadow overflow-hidden sm:rounded-lg border-b border-gray-200 ">
-                        <form id="formulario" class="bg-white p-3">
+                        <form id="formulario2" class="bg-white p-3">
                             <div class="mb-4">
                                 <label class="block text-gray-700 text-sm font-bold mb-2" for="nombre">Nombre</label>
                                 <input 
@@ -72,12 +72,10 @@
                                 />
                             </div>
 
-
-                            <input
-                                type="submit"
-                                class="bg-teal-600 hover:bg-teal-900 w-full mt-5 p-2 text-white uppercase font-bold"
-                                value="Agregar Cliente"
-                            />
+                            <button type="submit"  type="submit"
+                            class="bg-teal-600 hover:bg-teal-900 w-full mt-5 p-2 text-white uppercase font-bold"
+                            value="Agregar Cliente"> insertar </button>
+                            
                         </form>
                     </div>
                 </div>
