--- a/36-PROYECTO-Clima/index.html
+++ b/36-PROYECTO-Clima/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-    <div class="container mx-auto ">
+    <div class="container mx-auto " id="contenido">
         <h1 id="titulo" class="text-4xl mt-5 text-white font-bold uppercase text-center">Busca el Clima</h1>
         <div class="max-w-lg mx-auto ">
 
