--- a/39-PROYECTO-Criptomonedas/index.html
+++ b/39-PROYECTO-Criptomonedas/index.html
@@ -20,11 +20,11 @@
                     <div class="row">
                         <label>Elige tu Moneda</label>
                         <select
-                            class="u-full-width"
-                            id="moneda"
+                            class="u-full-width monedita"
+                            id="moneda monedo"
                             name="moneda"
                         >
-                                <option value="">Elige tu moneda</option>
+                                <option class="opt" value="">Elige tu moneda</option>
                                 <option value="USD">Dolar Estadounidense</option>
                                 <option value="MXN">Peso Mexicano</option>
                                 <option value="GBP">Libras</option>
@@ -33,14 +33,19 @@
                     </div>
 
                     <div class="row">
-                    <div>
+                    <div class="divisor">
                         <label>Elige tu Criptomoneda</label>
                         <select 
                             class="u-full-width"
                             id="criptomonedas"
                             name="criptomoneda"
                         >
-                            <option value="">Elige tu criptomoneda</option>
+                            <option value="" class="opcion">Elige tu criptomoneda</option>
+                            <option value="" class="opcion">Elige tu criptomoneda</option>
+                            <option value="" class="opcion">Elige tu criptomoneda</option>
+                            <option value="" class="opcion">Elige tu criptomoneda</option>
+                            <option value="" class="opcion">Elige tu criptomoneda</option>
+                            <option value="" class="opcion">Elige tu criptomoneda</option>
                         </select>
                     </div>
                     </div>
