--- a/44-PROYECTO-CRM-CRUD-REST/nuevo-cliente.html
+++ b/44-PROYECTO-CRM-CRUD-REST/nuevo-cliente.html
@@ -75,6 +75,7 @@
 
                             <input
                                 type="submit"
+                                id="sub"
                                 class="bg-teal-600 hover:bg-teal-900 w-full mt-5 p-2 text-white uppercase font-bold"
                                 value="Agregar Cliente"
                             />
